<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.musicstructureapp.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/songName"
            android:textColor="@color/playedSongTextColor"
            android:id="@+id/songNameTextView"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_alignTop="@+id/btnFav"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/btnFav"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/artist"
        android:id="@+id/textViewArtist"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/playlist"
        android:id="@+id/textViewPlayList"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewArtist"
        android:layout_alignLeft="@+id/textViewArtist"
        android:layout_alignStart="@+id/textViewArtist" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textViewScreenInfo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
